@@ -10,6 +10,7 @@
             Util Timer no longer uses RTC - works based on estimated time from the hardware timer itself (fix #1749, ref #1444)
             Util Timer now uses time offsets (not variables based on current system time) - avoids drift
             nRF52: CPU now sleeps when while UART/BLE data is waiting to be sent (fix #1938)
+            JSON.stringify now checks for potential stack overflow when stringifying (fix #1940)
 
      2v07 : Graphics.asImage() now contains buffer when bpp != 8 (fix #1863)
             nRF52 SDK15: Fix NRF.setScan/findDevices/etc
